Email address auto filling

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,6 +17,7 @@
  *= require nvd3
  *= require css3-mixins
  *= require dropzone/basic
+ *= require selectize.bootstrap3
  *
  *= require_self
  *= require_tree ./pages
