--- a/app/views/issues/_index.html.slim
+++ b/app/views/issues/_index.html.slim
@@ -16,7 +16,7 @@
 / Requires local_assigns to include project, key, translation, issues.
 / local_assigns[:issue] is optional. If provided, it will be assumed that the issue's creation failed.
 
-.entry.row#issues
+.entry.row#issues data-search-url=search_users_url data-auto-fill=current_user.can_search_users?.to_s
   .sixteen.columns
     legend ISSUES
 
