--- a/app/views/issues/update.js.erb
+++ b/app/views/issues/update.js.erb
@@ -16,3 +16,6 @@
 
 <% # Replace the issue html with updated html %>
 $('#issues #issue-wrapper-<%= issue.id %>').replaceWith('<%=j render partial: 'issues/show_wrapper', locals: local_assigns %>');
+
+<% # Trigger a 'render' event to selectize emails field %>
+$('#issues #issue-wrapper-<%= issue.id %> .issue-form').trigger('render');
