Added commit stats for translations that aren't done

--- a/app/views/commits/_layout.slim
+++ b/app/views/commits/_layout.slim
@@ -92,7 +92,7 @@
               dd.bar-status
                 span class=(finished ? 'finished' : 'inprogress') style="width: #{(@commit.fraction_done(locale) * 100).round(2)}%;"
               dd.text-status class=(required ? (finished ? 'text-success' : 'text-error') : nil)
-                = "#{@commit.translations_new(locale)} left (#{@commit.translations_total(locale)} total)"
+                = "#{@commit.translations_not_done(locale)} left (#{@commit.translations_total(locale)} total)"
 
     .thirteen.columns.sidebar-main
       = yield
