--- a/app/views/translations/edit.js.coffee.erb
+++ b/app/views/translations/edit.js.coffee.erb
@@ -14,39 +14,10 @@
 
 $(document).ready ->
   find_fuzzy_matches = (source_copy, locale) ->
-    fuzzy_matches = $('.fuzzy-matches').first()
-    fuzzy_matches.empty()
-    fuzzy_matches.append($('<dd/>').text('Loading fuzzy matches'))
-    $.ajax "<%= search_fuzzy_matches_path(format: 'json') %>",
-      data:
-        source_copy: source_copy
-        locale: target_locale
-      success: (matches) =>
-        fuzzy_matches.empty()
-        if matches.length == 0
-          fuzzy_matches.append($('<dd/>').text('No fuzzy matches found :('))
-        for match in matches
-          do (match) =>
-            match_percentage = $('<span/>').addClass("match-percentage").text("(#{match.match_percentage.toString()[0..4]}%) ")
-            match_element = $('<a/>').append(match_percentage)
-                                     .append($('<span/>').addClass('fuzzy-matched-copy').text(match.copy))
-                                     .append($('<span/>').addClass('changed').text(source_copy).hide())
-                                     .append($('<span/>').addClass('original').text(match.source_copy).hide())
-
-            match_wrapper = $('<dd/>').append(match_element)
-                                      .append($('<div/>').addClass('diff'))
-
-            match_element.click =>
-              copy_field.val match.copy
-
-            match_element.mouseenter ->
-              match_element.prettyTextDiff
-                diffContainer: match_wrapper.find('.diff')
-              match_wrapper.find('.diff').prepend($('<span/>').addClass("match-percentage").text("Source Diff: "))
-            match_element.mouseleave ->
-              match_wrapper.find('.diff').empty()
-
-            fuzzy_matches.append(match_wrapper)
+    loadFuzzyMatches($('.fuzzy-matches').first(),
+                     copy_field,
+                     "<%= fuzzy_match_project_key_translation_url(@translation.key.project, @translation.key, @translation, format: 'json') %>",
+                     source_copy)
 
   source_copy = "<%= escape_javascript @translation.source_copy %>"
   target_locale = "<%= escape_javascript @translation.rfc5646_locale %>"
