--- a/app/assets/templates/translationworkbench/translation_item.mustache
+++ b/app/assets/templates/translationworkbench/translation_item.mustache
@@ -4,6 +4,16 @@
     <div class="eight columns left">
       <div class="translation-side"> 
         <textarea class="translation-area {{status}}">{{translation_copy}}</textarea>
+
+        {{#effective_locale_associations.0}}
+          <div class="controls effective-locale-associations muted">
+            <span>Copy to:</span>
+            {{#effective_locale_associations}}
+              <input type="checkbox" value="{{target_rfc5646_locale}}" {{#checked}}checked{{/checked}}>{{target_rfc5646_locale}}</input>
+            {{/effective_locale_associations}}
+          </div>
+        {{/effective_locale_associations.0}}
+
         <button class="small default copy-source">Copy from source</button>
         <button class="small default convert-source">Convert source</button>
 
@@ -20,7 +30,7 @@
             <i class="fa fa-pencil-square-o"></i>
           </button>
         </span>
-        
+
         <div class="notes">
           <div class="half tips"></div>
           <div class="half alerts"></div>
