--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -2,7 +2,7 @@
 @import "compass";
 @import "compass/reset";
 @import "compass/layout";
-
+@import "compass/css3/box";
 
 $base-font-size: 18px;
 $base-line-height: 30px;
