--- a/app/views/projects/_form.slim
+++ b/app/views/projects/_form.slim
@@ -237,6 +237,19 @@
           .controls
             = f.content_tag_field 'div', :skip_importer_paths, class: 'hash-field', 'data-value' => @project.skip_importer_paths.to_json
 
+  - if current_user.admin? && @project.persisted?
+    .header.advanced_actions_header
+      h1 Advanced
+    hr.divider
+
+    .row
+      .eight.columns
+        fieldset
+          legend Multi Locale Translations
+
+          .space-group
+            = link_to "Mass Copy Translations From One Locale Into Another", setup_mass_copy_translations_project_url
+
   .form-actions
     = f.submit class: 'primary', value: 'save', data: { confirm: 'Are you sure?  Changes are irreversible.'}
     button.default href=projects_url Cancel           
