--- a/app/assets/templates/translationworkbench/translation_item.mustache
+++ b/app/assets/templates/translationworkbench/translation_item.mustache
@@ -9,12 +9,14 @@
           <div class="controls multi-updateable-translations muted">
             <span>Copy to:</span>
             {{#multi_updateable_translations_and_locale_associations}}
-              <input type="checkbox" value="{{translation.rfc5646_locale}}"
-                {{#locale_association}}
-                  {{#checked}}checked{{/checked}}
-                  {{#uncheckable}}disabled{{/uncheckable}}
-                {{/locale_association}}>
-                <a href="{{translation.edit_path}}" target="_blank">{{translation.rfc5646_locale}}</a>
+              <span>
+                <input type="checkbox" value="{{translation.rfc5646_locale}}"
+                  {{#locale_association}}
+                    {{#checked}}checked{{/checked}}
+                    {{#uncheckable}}disabled{{/uncheckable}}
+                  {{/locale_association}}>
+                  <a href="{{translation.edit_path}}" target="_blank" class="muted {{translation.status}}">{{translation.rfc5646_locale}}</a>
+                </span>
               </input>
             {{/multi_updateable_translations_and_locale_associations}}
           </div>
