Add a validation to the LocaleAssociation class to not allow setting uncheck_disabled if checked is not set

--- a/app/views/locale_associations/_form.html.slim
+++ b/app/views/locale_associations/_form.html.slim
@@ -41,8 +41,7 @@ hr.divider
       .control-group
         = f.label :uncheck_disabled, class: 'control-label'
         .controls.checkbox-wrapper
-          = f.check_box
-            uncheck_disabled
+          = f.check_box :uncheck_disabled
           span.help-block Do you want to disable unchecking the checkbox if it's checked?
   .form-actions
     = f.submit class: 'primary', value: 'save', data: { confirm: 'Are you sure?  Changes are irreversible.'}
