Add validation to the UI as well

--- a/app/assets/stylesheets/pages/locale_associations.css.scss
+++ b/app/assets/stylesheets/pages/locale_associations.css.scss
@@ -2,4 +2,8 @@ body.locale_associations {
   .controls.checkbox-wrapper {
     padding-top: 9px;
   }
+
+  .control-group.disabled {
+    opacity: 0.2;
+  }
 }
