--- a/app/assets/templates/translationworkbench/translation_item.mustache
+++ b/app/assets/templates/translationworkbench/translation_item.mustache
@@ -15,7 +15,12 @@
                     {{#checked}}checked{{/checked}}
                     {{#uncheck_disabled}}disabled{{/uncheck_disabled}}
                   {{/locale_association}}>
-                  <a href="{{translation.edit_path}}" target="_blank" class="muted {{translation.status}}">{{translation.rfc5646_locale}}</a>
+                  {{#translation}}
+                    <a href="{{edit_path}}" target="_blank" class="muted {{status}}">
+                      {{rfc5646_locale}}
+                      {{#similarity}} ({{similarity}}){{/similarity}}
+                    </a>
+                  {{/translation}}
                 </span>
               </input>
             {{/multi_updateable_translations_and_locale_associations}}
