--- a/app/views/devise/_unified_authentication.slim
+++ b/app/views/devise/_unified_authentication.slim
@@ -15,9 +15,7 @@
 - content_for :shuttle_logo do 
   = image_tag("shuttle_white.png")
 - content_for :class do
-  = "#{controller_name} unified-authentication"
-- content_for :id do 
-  = [controller_name, action_name].join('-')
+  = "unified-authentication"
 
 ruby:
   flash.now[:alert] = resource.errors.full_messages.unshift('Errors:') unless resource.errors.empty?
