Fix the translation page UI

--- a/app/assets/stylesheets/pages/translations.scss
+++ b/app/assets/stylesheets/pages/translations.scss
@@ -63,6 +63,10 @@ body.translations {
 
   .info-side {
     background-color: $gray6;
+
+    #source_copy {
+      word-wrap: break-word;
+    }
   }
 
   .edit-side .edit-page-link {
