--- a/app/views/translations/edit.slim
+++ b/app/views/translations/edit.slim
@@ -63,7 +63,7 @@ hr.divider
         legend = @translation.source_locale.name
 
         .control-group
-          #source_copy.well
+          #source_copy.well.seven.columns
             span.highlight
               = @translation.source_copy
 
