Open Source version 2.0

--- a/app/views/commit_mailer/notify_import_errors_in_commit_creator.text.erb
+++ b/app/views/commit_mailer/notify_import_errors_in_commit_creator.text.erb
@@ -10,7 +10,7 @@ Error Class:   <%= @err.class %>
 Error Message: <%= @err.message %>
 
 
-Please email <%= Shuttle::Configuration.mailer.from %> for questions.
+Please email <%= Shuttle::Configuration.app.mailer.from %> for questions.
 
 Sincerely,
 The Shuttle Automated Mailer
