--- a/app/assets/stylesheets/pages/commits.css.scss
+++ b/app/assets/stylesheets/pages/commits.css.scss
@@ -13,6 +13,10 @@ body.commits {
     }
   }
 
+  .control-group label.info {
+    padding-top: 0;
+  }
+
   .form-action { margin-top: 40px; }
 
   .filter-bar {
